add: Navbar registro, boton Vaciar y carpeta img
Apartado 10.1 (#26) de la primera entrega
+NavBar: menú añadido, mediante fragments, para navegar entre pasos del Registro
+Botón Vaciar: añadido botón para vaciar campos del formulario en cada
paso
+Carpeta Img: añadida a módulo común para alamacenar imágenes que podamos
necesitar en Empleados y Administración

--- a/empleados/src/main/resources/messages.properties
+++ b/empleados/src/main/resources/messages.properties
@@ -30,3 +30,11 @@ Validadcion.cuentaCorrienteDTO.cuentaCorriente = La cuenta corriente debe tener 
 
 
 
+### BOTONES FORMULARIO
+Boton.vaciar = Vaciar
+Boton.siguiente = Siguiente
+Boton.guardar = Guardar Datos
+
+
+
+
