add: refactor e implementación de validaciones generales

--- a/empleados/src/main/resources/messages.properties
+++ b/empleados/src/main/resources/messages.properties
@@ -12,17 +12,21 @@ typeMismatch.datosFormulario.peso = El peso debe ser un n√∫mero entero con hasta
 ## EmpleadoDTO
 Vaidacion.email.pattern = El email no debe quedar vac√≠o y debe seguir el siguiente formato: miemail@miemail.com
 Validacion.fechaNac.Past = La fecha debe ser una fecha pasada.
+Validacion.fechaNac.vacio = La fecha no puede estar vac√≠a
 Validacion.generoSeleccionado.notBlank = El valor debe ser Masculino, Femenino u Otro
 Vaidacion.telefono.Size = El tel√©fono debe contener como m√≠nimo 9 n√∫meros.
 Validacion.telefono.digitos = El tel√©fono debe contener n√∫meros enteros
+Validacion.edad.fueraRango = La edad no coincide con la fecha de nacimiento
+Validacion.edad.positive = La edad tiene que ser un n∫ positivo
 
-##DireccionDTO
+## DireccionDTO
 Validadcion.direccionDTO.numeroPositivo = El n˙mero debe ser positivo
 Validadcion.direccionDTO.planta = El n˙mero de planta es obligatorio
 Validadcion.direccionDTO.puerta = El n˙mero de puerta debe ser obligatorio
 Validadcion.direccionDTO.localidad = La localidad es obligatoria
 Validadcion.direccionDTO.codigoPostal = El cÛdigo postal es obligatorio
 Validadcion.direccionDTO.region = La regiÛn es obligatoria
+Validacion.direccionDTO.pais = El pais es obligatorio
 
 ## DatosEconomicosDTO
 Validacion.codigoEntidadBancaria.notBlank = El valor debe ser uno de los siguientes: pt, es, fr, uk o it
@@ -33,6 +37,10 @@ Validacion.salario.Digits = El n√∫mero debe tener m√°ximo 3 d√≠gitos enteros y 2
 ## UsuarioDTO
 
 
+
+Validacion.tarjetaCredito.notBlank = El tipo de la tarjeta de credito no es correcto (v / AM / MC)
+Validacion.tarjetaCredito.formatoInvalido = La combinacion de numeros de la tarjeta de credito es invalida
+Validacion.cuentaCorriente.iban
 
 ### BOTONES FORMULARIO
 Boton.vaciar = Vaciar
