UPDATE y ADD: Entidades para Registro por Pasos
Issue #26

--- a/empleados/src/main/resources/messages.properties
+++ b/empleados/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
 ### MENSAJES VALIDACIONES
 
-## Generales
+## GENERALES
 jakarta.validation.constraints.NotBlank.message=Este campo no puede estar vacÃ­o
 jakarta.validation.constraints.NotNull.message= Este campo no puede ser nulo
 
@@ -8,21 +8,54 @@ jakarta.validation.constraints.NotNull.message= Este campo no puede ser nulo
 typeMismatch.java.time.LocalDate= Debes de introducir una fecha válida (dd/mm/yyyy)
 typeMismatch.datosFormulario.edad = La Edad debe ser un nÃºmero entero
 typeMismatch.datosFormulario.peso = El peso debe ser un nÃºmero entero con hasta dos decimales
+typeMismatch.datosFormulario.foto = Debes Incluir una foto
 
-## EmpleadoDTO
+# EMPLEADO_DTO
+## Validaciones
 Vaidacion.email.pattern = El email no debe quedar vacÃ­o y debe seguir el siguiente formato: miemail@miemail.com
 Validacion.fechaNac.Past = La fecha debe ser una fecha pasada.
 Validacion.generoSeleccionado.notBlank = El valor debe ser Masculino, Femenino u Otro
 Vaidacion.telefono.Size = El telÃ©fono debe contener como mÃ­nimo 9 nÃºmeros.
 Validacion.telefono.digitos = El telÃ©fono debe contener nÃºmeros enteros
 
-##DireccionDTO
+## Texto de Campos en formulario
+Datos-personales.nombre = Nombre
+Datos-personales.apellido = Apellidos
+Datos-personales.fotografia = Fotografia
+Datos-personales.fechaNacimiento = Fecha de Nacimiento
+Datos-personales.edad = Edad
+Datos-Personales.pais = Pais de Nacimiento
+Datos-Personales.comentario = Comentario
+Placeholder.comentario = Deja tu comentario
+
+## DOCUMENTOS
+Datos-documento.documento = Documento
+Datos-documento.prefijo = Prefijo Telefónico
+Datos-documento.telf = Número Teléfono Móvil
+
+## DIRECCION_DTO
+## Validaciones
 Validadcion.direccionDTO.numeroPositivo = El número debe ser positivo
 Validadcion.direccionDTO.planta = El número de planta es obligatorio
 Validadcion.direccionDTO.puerta = El número de puerta debe ser obligatorio
 Validadcion.direccionDTO.localidad = La localidad es obligatoria
 Validadcion.direccionDTO.codigoPostal = El código postal es obligatorio
 Validadcion.direccionDTO.region = La región es obligatoria
+
+## Texto de Campos en formulario
+Datos-direccion.nombreViaDirreccion = Nombre de la Via
+Datos-direccion.numeroViaDirreccion = Número de la Via
+Datos-direccion.portalViaDirreccion = Portal
+Datos-direccion.plantaViaDirreccion = Planta
+Datos-direccion.puertaViaDirreccion = Puerta
+Datos-direccion.localidadViaDirreccion = Localidad
+Datos-direccion.regionDirreccion = Región/Comunidad Autónoma/Estado
+Datos-direccion.codigoPostalDirreccion = Código Postal
+
+## DEPARTAMENTO
+Datos-departamento.nombreDept = Departamento
+Datos-departamento.especialidades = Especialidades
+
 
 ## DatosEconomicosDTO
 Validacion.codigoEntidadBancaria.notBlank = El valor debe ser uno de los siguientes: pt, es, fr, uk o it
