--- a/empleados/src/main/resources/messages.properties
+++ b/empleados/src/main/resources/messages.properties
@@ -1,36 +1,36 @@
 ### MENSAJES VALIDACIONES
 
 ## GENERALES
-jakarta.validation.constraints.NotBlank.message=Este campo no puede estar vacÃ­o
+jakarta.validation.constraints.NotBlank.message= Este campo no puede estar vacío
 jakarta.validation.constraints.NotNull.message= Este campo no puede ser nulo
 
 ###De Tipo
 typeMismatch.java.time.LocalDate= Debes de introducir una fecha válida (dd/mm/yyyy)
-typeMismatch.datosFormulario.edad = La Edad debe ser un nÃºmero entero
-typeMismatch.datosFormulario.peso = El peso debe ser un nÃºmero entero con hasta dos decimales
-typeMismatch.datosFormulario.foto = Debes Incluir una foto
+typeMismatch.datosFormulario.edad = La edad debe ser un número entero
+typeMismatch.datosFormulario.peso = El peso debe ser un número entero con hasta dos decimales
+typeMismatch.datosFormulario.foto = Debes incluir una foto
 
 
 # PASO 1 #
 ## EMPLEADO_DTO
 ### Validaciones
-Vaidacion.email.pattern = El email no debe quedar vacÃ­o y debe seguir el siguiente formato: miemail@miemail.com
+Vaidacion.email.pattern = El email no debe quedar vacío y debe seguir el siguiente formato: miemail@miemail.com
 Validacion.fechaNac.Past = La fecha debe ser una fecha pasada.
-Validacion.fechaNac.vacio = La fecha no puede estar vacÃ­a
+Validacion.fechaNac.vacio = La fecha no puede estar vacía
 Validacion.generoSeleccionado.notBlank = El valor debe ser Masculino, Femenino u Otro
-Vaidacion.telefono.Size = El telÃ©fono debe contener como mÃ­nimo 9 nÃºmeros.
-Validacion.telefono.digitos = El telÃ©fono debe contener nÃºmeros enteros
+Vaidacion.telefono.Size = El teléfono debe contener como mínimo 9 números.
+Validacion.telefono.digitos = El teléfono debe contener números enteros
 Validacion.edad.fueraRango = La edad no coincide con la fecha de nacimiento
-Validacion.edad.positive = La edad tiene que ser un nº positivo
+Validacion.edad.positive = La edad tiene que ser un número positivo
 
 
 ## Texto de Campos en formulario
 Datos-personales.nombre = Nombre
 Datos-personales.apellido = Apellidos
-Datos-personales.fotografia = Fotografia
+Datos-personales.fotografia = Fotografía
 Datos-personales.fechaNacimiento = Fecha de Nacimiento
 Datos-personales.edad = Edad
-Datos-Personales.pais = Pais de Nacimiento
+Datos-Personales.pais = País de Nacimiento
 Datos-Personales.comentario = Comentario
 Placeholder.comentario = Deja tu comentario
 
@@ -50,11 +50,11 @@ Validadcion.direccionDTO.puerta = El número de puerta debe ser obligatorio
 Validadcion.direccionDTO.localidad = La localidad es obligatoria
 Validadcion.direccionDTO.codigoPostal = El código postal es obligatorio
 Validadcion.direccionDTO.region = La región es obligatoria
-Validacion.direccionDTO.pais = El pais es obligatorio
+Validacion.direccionDTO.pais = El país es obligatorio
 
 ## Texto de Campos en formulario
-Datos-direccion.nombreViaDirreccion = Nombre de la Via
-Datos-direccion.numeroViaDirreccion = Número de la Via
+Datos-direccion.nombreViaDirreccion = Nombre de la vía
+Datos-direccion.numeroViaDirreccion = Número de la vía
 Datos-direccion.portalViaDirreccion = Portal
 Datos-direccion.plantaViaDirreccion = Planta
 Datos-direccion.puertaViaDirreccion = Puerta
@@ -89,25 +89,25 @@ Datos.Economicos.anioCaducidad = Año
 Datos.Economicos.cvc = CVC
 
 ## Validaciooes
-Validacion.Salario.Digits =El nÃºmero debe tener mÃ¡ximo 8 dÃ­gitos enteros y 2 decimales.
-Validacion.Comision.Digits =El nÃºmero debe tener mÃ¡ximo 8 dÃ­gitos enteros y 2 decimales.
+Validacion.Salario.Digits = El número debe tener máximo 8 dígitos enteros y 2 decimales.
+Validacion.Comision.Digits = El número debe tener máximo 8 dígitos enteros y 2 decimales.
 Validacion.codigoEntidadBancaria.notBlank = El valor debe ser uno de los siguientes: pt, es, fr, uk o it
 Validadcion.cuentaCorrienteDTO.cuentaCorriente = La cuenta corriente debe tener 20 dígitos exactos
-Validacion.salario.Digits = El nÃºmero debe tener mÃ¡ximo 3 dÃ­gitos enteros y 2 decimales.
-Validacion.Salario.PositiveOrZero = El Salario debe ser un valor Positivo
-Validacion.Salario.Notnull = El Salario es obligatorio
-Validacion.Comision.Notnull = La Comisión es obligatoria
+Validacion.salario.Digits = El número debe tener máximo 3 dígitos enteros y 2 decimales.
+Validacion.Salario.PositiveOrZero = El salario debe ser un valor Positivo
+Validacion.Salario.Notnull = El salario es obligatorio
+Validacion.Comision.Notnull = La comisión es obligatoria
 Validacion.numeroCuenta.NotBlank = El número de cuenta corriente es obligatorio
 Validacion.numeroCuenta.IBAN = El formato IBAN no es válido
-Validacion.Comision.PositiveOrZero = La Comisión debe ser un valor Positivo
+Validacion.Comision.PositiveOrZero = La comisión debe ser un valor Positivo
 Validacion.entidadBancaria.NotNull = La entidad bancaria es obligatoria
-Validacion.tarjetaCredito.notBlank = El tipo de la tarjeta de credito no es correcto (v / AM / MC)
-Validacion.tarjetaCredito.formatoInvalido = La combinacion de numeros de la tarjeta de credito es invalida
+Validacion.tarjetaCredito.notBlank = El tipo de la tarjeta de crédito no es correcto (v / AM / MC)
+Validacion.tarjetaCredito.formatoInvalido = La combinación de números de la tarjeta de crédito es invalida
 Validacion.tarjetaCredito.anioMinimno = El año no puede ser menor a 2025
 Validacion.tarjetaCredito.anioMaximo = El año no puede ser mayor a 2045
 Validacion.cuentaCorriente.iban =  Esto es el IBAN
 Validacion.tarjetaCredito.cvc = CVC no válido
-Validacion.Consentimiento.true = Aceptar guardar la información sumunistrada
+Validacion.Consentimiento.true = Aceptar guardar la información suministrada
 
 ## Títulos H2
 Titulo.datosFinancieros = Formulario de Registro de Datos Financieros del Empleado
@@ -125,10 +125,10 @@ Boton.resetear = Resetear
 Boton.vaciar = Vaciar
 Boton.siguiente = Siguiente
 Boton.guardar = Guardar Datos
-Boton.selecciona.especialidad = Seleccionar Especialidades
-Boton.deselecciona.especialidad = Deseleccionar Especialidades
+Boton.selecciona.especialidad = Seleccionar especialidades
+Boton.deselecciona.especialidad = Deseleccionar especialidades
 Boton.selecciona.genero = Seleccionar Género
-Boton.deselecciona.genero = Deseleccionar Género
+Boton.deselecciona.genero = Deseleccionar género
 
 
 
