ADD: Estilos CSS, GlobalException y FileEncoding
+ add: GlobalExceptionHandler en paquete exceptions en Comun
+ Se aplican Estilos y la opción de quitarlos en Registro por pasos
+ message_en.properties añadido para i18n
+ HotFix: Botones de Seleccion y deselección de radios y checkboxes
+ HotFix: tildes en platilla. En Intellij_ Settings->File
  Encodings->aplicar UTF-8 de mkanera global.

  Issue #26

# Conflicts:
#	empleados/src/main/java/org/grupo_h/empleados/service/EmpleadoServiceImpl.java
#	empleados/src/main/resources/templates/areaPersonal.html

--- a/empleados/src/main/resources/messages.properties
+++ b/empleados/src/main/resources/messages.properties
@@ -1,124 +1,113 @@
 ### MENSAJES VALIDACIONES
 
 ## GENERALES
-jakarta.validation.constraints.NotBlank.message= Este campo no puede estar vacío
+jakarta.validation.constraints.NotBlank.message= Este campo no puede estar vacÃ­o
 jakarta.validation.constraints.NotNull.message= Este campo no puede ser nulo
 
-###De Tipo
-typeMismatch.java.time.LocalDate= Debes de introducir una fecha válida (dd/mm/yyyy)
-typeMismatch.datosFormulario.edad = La edad debe ser un número entero
-typeMismatch.datosFormulario.peso = El peso debe ser un número entero con hasta dos decimales
+### De Tipo
+typeMismatch.java.time.LocalDate= Debes de introducir una fecha vÃ¡lida (dd/mm/yyyy)
+typeMismatch.datosFormulario.edad = La edad debe ser un nÃºmero entero
+typeMismatch.datosFormulario.peso = El peso debe ser un nÃºmero entero con hasta dos decimales
 typeMismatch.datosFormulario.foto = Debes incluir una foto
-
 
 # PASO 1 #
 ## EMPLEADO_DTO
 ### Validaciones
-Vaidacion.email.pattern = El email no debe quedar vacío y debe seguir el siguiente formato: miemail@miemail.com
+Validacion.email.pattern = El email no debe quedar vacÃ­o y debe seguir el siguiente formato: miemail@miemail.com
 Validacion.fechaNac.Past = La fecha debe ser una fecha pasada.
-Validacion.fechaNac.vacio = La fecha no puede estar vacía
+Validacion.fechaNac.vacio = La fecha no puede estar vacÃ­a
 Validacion.generoSeleccionado.notBlank = El valor debe ser Masculino, Femenino u Otro
-Vaidacion.telefono.Size = El teléfono debe contener como mínimo 9 números.
-Validacion.telefono.digitos = El teléfono debe contener números enteros
+Validacion.telefono.Size = El telÃ©fono debe contener como mÃ­nimo 9 nÃºmeros.
+Validacion.telefono.digitos = El telÃ©fono debe contener nÃºmeros enteros
 Validacion.edad.fueraRango = La edad no coincide con la fecha de nacimiento
-Validacion.edad.positive = La edad tiene que ser un número positivo
-
+Validacion.edad.positive = La edad tiene que ser un nÃºmero positivo
 
 ## Texto de Campos en formulario
 Datos-personales.nombre = Nombre
 Datos-personales.apellido = Apellidos
-Datos-personales.fotografia = Fotografía
-Datos-personales.fechaNacimiento = Fecha de Nacimiento
+Datos-personales.fotografia = FotografÃ­a
+Datos-personales.genero = Selecciona tu gÃ©nero
+Datos-personales.fechaNacimiento = Fecha de nacimiento
 Datos-personales.edad = Edad
-Datos-Personales.pais = País de Nacimiento
+Datos-Personales.pais = PaÃ­s de nacimiento
 Datos-Personales.comentario = Comentario
 Placeholder.comentario = Deja tu comentario
 
-
 # PASO 2 #
 ## DOCUMENTOS
+Datos-documento.tipoDocumento = Tipo de Documento
 Datos-documento.documento = Documento
-Datos-documento.prefijo = Prefijo Telefónico
-Datos-documento.telf = Número Teléfono Móvil
-
+Datos-documento.prefijo = Prefijo telefÃ³nico
+Datos-documento.telf = NÃºmero telÃ©fono mÃ³vil
 
 ## Validaciones
 ## DireccionDTO
-Validadcion.direccionDTO.numeroPositivo = El número debe ser positivo
-Validadcion.direccionDTO.planta = El número de planta es obligatorio
-Validadcion.direccionDTO.puerta = El número de puerta debe ser obligatorio
-Validadcion.direccionDTO.localidad = La localidad es obligatoria
-Validadcion.direccionDTO.codigoPostal = El código postal es obligatorio
-Validadcion.direccionDTO.region = La región es obligatoria
-Validacion.direccionDTO.pais = El país es obligatorio
+Validacion.direccionDTO.numeroPositivo = El nÃºmero debe ser positivo
+Validacion.direccionDTO.planta = El nÃºmero de planta es obligatorio
+Validacion.direccionDTO.puerta = El nÃºmero de puerta debe ser obligatorio
+Validacion.direccionDTO.localidad = La localidad es obligatoria
+Validacion.direccionDTO.codigoPostal = El cÃ³digo postal es obligatorio
+Validacion.direccionDTO.region = La regiÃ³n es obligatoria
+Validacion.direccionDTO.pais = El paÃ­s es obligatorio
 
 ## Texto de Campos en formulario
-Datos-direccion.nombreViaDirreccion = Nombre de la vía
-Datos-direccion.numeroViaDirreccion = Número de la vía
+Datos-direccion.tipoVia = Tipo de Via
+Datos-direccion.nombreViaDirreccion = Nombre de la vÃ­a
+Datos-direccion.numeroViaDirreccion = NÃºmero de la vÃ­a
 Datos-direccion.portalViaDirreccion = Portal
 Datos-direccion.plantaViaDirreccion = Planta
 Datos-direccion.puertaViaDirreccion = Puerta
 Datos-direccion.localidadViaDirreccion = Localidad
-Datos-direccion.regionDirreccion = Región/Comunidad Autónoma/Estado
-Datos-direccion.codigoPostalDirreccion = Código Postal
-
+Datos-direccion.regionDirreccion = RegiÃ³n/Comunidad AutÃ³noma/Estado
+Datos-direccion.codigoPostalDirreccion = CÃ³digo Postal
 
 # PASO 3 #
 ## DEPARTAMENTO
 Datos-departamento.nombreDept = Departamento
 Datos-departamento.especialidades = Especialidades
-## Títulos h2
-Titulo.datosDepartamento = Formulario de Datos Económicos
-
-
-
-
+## TÃ­tulos h2
+Titulo.datosDepartamento = Formulario de Datos EconÃ³micos
 
 # PASO 4 #
 ## DatosFinancieros
 
 ## Texto de Campos en formulario
-Datos.Economicos.cuenta = Cuenta Corriente
-Datos.Economicos.entidad = Entidad Bancaria
+Datos.Economicos.cuenta = Cuenta corriente
+Datos.Economicos.entidad = Entidad bancaria
 Datos.Economicos.Salario = Salario
-Datos.Economicos.Comision = Comisión
-Datos.Economicos.tipoTarjeta = Tipo de Tarjeta de Crédito
-Datos.Economicos.numeroTarjetaCredito = Número de la tarjeta
+Datos.Economicos.Comision = ComisiÃ³n
+Datos.Economicos.tipoTarjeta = Tipo de tarjeta de crÃ©dito
+Datos.Economicos.numeroTarjetaCredito = NÃºmero de la tarjeta
 Datos.Economicos.mesCaducidad = Mes
-Datos.Economicos.anioCaducidad = Año
+Datos.Economicos.anioCaducidad = AÃ±o
 Datos.Economicos.cvc = CVC
 
-## Validaciooes
-Validacion.Salario.Digits = El número debe tener máximo 8 dígitos enteros y 2 decimales.
-Validacion.Comision.Digits = El número debe tener máximo 8 dígitos enteros y 2 decimales.
+## Validaciones
+Validacion.Salario.Digits = El nÃºmero debe tener mÃ¡ximo 8 dÃ­gitos enteros y 2 decimales.
+Validacion.Comision.Digits = El nÃºmero debe tener mÃ¡ximo 8 dÃ­gitos enteros y 2 decimales.
 Validacion.codigoEntidadBancaria.notBlank = El valor debe ser uno de los siguientes: pt, es, fr, uk o it
-Validadcion.cuentaCorrienteDTO.cuentaCorriente = La cuenta corriente debe tener 20 dígitos exactos
-Validacion.salario.Digits = El número debe tener máximo 3 dígitos enteros y 2 decimales.
-Validacion.Salario.PositiveOrZero = El salario debe ser un valor Positivo
+Validacion.cuentaCorrienteDTO.cuentaCorriente = La cuenta corriente debe tener 20 dÃ­gitos exactos
+Validacion.salario.Digits = El nÃºmero debe tener mÃ¡ximo 3 dÃ­gitos enteros y 2 decimales.
+Validacion.Salario.PositiveOrZero = El salario debe ser un valor positivo
 Validacion.Salario.Notnull = El salario es obligatorio
-Validacion.Comision.Notnull = La comisión es obligatoria
-Validacion.numeroCuenta.NotBlank = El número de cuenta corriente es obligatorio
-Validacion.numeroCuenta.IBAN = El formato IBAN no es válido
-Validacion.Comision.PositiveOrZero = La comisión debe ser un valor Positivo
+Validacion.Comision.Notnull = La comisiÃ³n es obligatoria
+Validacion.numeroCuenta.NotBlank = El nÃºmero de cuenta corriente es obligatorio
+Validacion.numeroCuenta.IBAN = El formato IBAN no es vÃ¡lido
+Validacion.Comision.PositiveOrZero = La comisiÃ³n debe ser un valor positivo
 Validacion.entidadBancaria.NotNull = La entidad bancaria es obligatoria
-Validacion.tarjetaCredito.notBlank = El tipo de la tarjeta de crédito no es correcto (v / AM / MC)
-Validacion.tarjetaCredito.formatoInvalido = La combinación de números de la tarjeta de crédito es invalida
-Validacion.tarjetaCredito.anioMinimno = El año no puede ser menor a 2025
-Validacion.tarjetaCredito.anioMaximo = El año no puede ser mayor a 2045
-Validacion.cuentaCorriente.iban =  Esto es el IBAN
-Validacion.tarjetaCredito.cvc = CVC no válido
-Validacion.Consentimiento.true = Aceptar guardar la información suministrada
+Validacion.tarjetaCredito.notBlank = El tipo de la tarjeta de crÃ©dito no es correcto (v / AM / MC)
+Validacion.tarjetaCredito.formatoInvalido = La combinaciÃ³n de nÃºmeros de la tarjeta de crÃ©dito es invÃ¡lida
+Validacion.tarjetaCredito.anioMinimno = El aÃ±o no puede ser menor a 2025
+Validacion.tarjetaCredito.anioMaximo = El aÃ±o no puede ser mayor a 2045
+Validacion.cuentaCorriente.iban = Esto es el IBAN
+Validacion.tarjetaCredito.cvc = CVC no vÃ¡lido
+Validacion.Consentimiento.true = Aceptar guardar la informaciÃ³n suministrada
 
-## Títulos H2
+## TÃ­tulos H2
 Titulo.datosFinancieros = Formulario de Registro de Datos Financieros del Empleado
-Titulo.tarjetaCredito = Tarjeta de Crédito
-
+Titulo.tarjetaCredito = Tarjeta de CrÃ©dito
 
 ## UsuarioDTO
-
-
-
-
 
 ### BOTONES FORMULARIO
 Boton.resetear = Resetear
@@ -127,10 +116,5 @@ Boton.siguiente = Siguiente
 Boton.guardar = Guardar Datos
 Boton.selecciona.especialidad = Seleccionar especialidades
 Boton.deselecciona.especialidad = Deseleccionar especialidades
-Boton.selecciona.genero = Seleccionar Género
-Boton.deselecciona.genero = Deseleccionar género
-
-
-
-
-
+Boton.selecciona.genero = Seleccionar gÃ©nero
+Boton.deselecciona.genero = Deseleccionar gÃ©nero
