--- a/empleados/src/main/resources/messages.properties
+++ b/empleados/src/main/resources/messages.properties
@@ -66,7 +66,7 @@ Datos-direccion.codigoPostalDirreccion = Código Postal
 Datos-departamento.nombreDept = Departamento
 Datos-departamento.especialidades = Especialidades
 ## Títulos h2
-Titulo.datosDepartamento = Formulario de Datos Económicos
+Titulo.datosDepartamento = Departamento y Habilidades
 
 # PASO 4 #
 ## DatosFinancieros
@@ -104,7 +104,7 @@ Validacion.tarjetaCredito.cvc = CVC no válido
 Validacion.Consentimiento.true = Aceptar guardar la información suministrada
 
 ## Títulos H2
-Titulo.datosFinancieros = Formulario de Registro de Datos Financieros del Empleado
+Titulo.datosFinancieros =  Datos Financieros
 Titulo.tarjetaCredito = Tarjeta de Crédito
 
 ## UsuarioDTO
