ADD: Estilos a la aplicación de Empleados
+ Aplicación de estilos a Autenticación de Usuario y Registro por pasos
  de empleado
+ No hay estilos añadidos a la parte de Producto porque ya está con
  Boostrap

--- a/empleados/src/main/resources/messages.properties
+++ b/empleados/src/main/resources/messages.properties
@@ -95,6 +95,7 @@ Validacion.numeroCuenta.NotBlank = El número de cuenta corriente es obligatorio
 Validacion.numeroCuenta.IBAN = El formato IBAN no es válido
 Validacion.Comision.PositiveOrZero = La comisión debe ser un valor positivo
 Validacion.entidadBancaria.NotNull = La entidad bancaria es obligatoria
+Validacion.tarjetaCredito.mes=Debe seleccionar un mes
 Validacion.tarjetaCredito.notBlank = El tipo de la tarjeta de crédito no es correcto (v / AM / MC)
 Validacion.tarjetaCredito.formatoInvalido = La combinación de números de la tarjeta de crédito es inválida
 Validacion.tarjetaCredito.anioMinimno = El año no puede ser menor a 2025
@@ -106,6 +107,7 @@ Validacion.Consentimiento.true = Aceptar guardar la información suministrada
 ## Títulos H2
 Titulo.datosFinancieros =  Datos Financieros
 Titulo.tarjetaCredito = Tarjeta de Crédito
+Titulo.cuentaCorriente = Cuenta Corriente
 
 ## UsuarioDTO
 
